updated html and travis.yml for aws deployment

--- a/web_dev/index.html
+++ b/web_dev/index.html
@@ -15,7 +15,12 @@
 
 <body class="container-fluid">
     <div class="row justify-content-center vertical-center body-text">
-        Hello World!
+        <div class="col"></div>
+        <div class="col">
+            <p>Hello World!</p>
+            <p>This website was created using the Bootstrap toolkit, whose code was uploaded to a <a href="https://github.com/rephlekt/website">Github</a> repo, which is watched and tested by <a href="https://travis-ci.com">Travis CI</a>, which <i>then</i>                deploys the site as a Docker container to an AWS Elastic Beanstalk instance. Whew!</p>
+        </div>
+        <div class="col"></div>
     </div>
 </body>
 
