--- a/web_dev/index.html
+++ b/web_dev/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>a website</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
@@ -14,14 +16,41 @@
 </head>
 
 <body class="container-fluid">
+    <nav class="navbar navbar-light body-text">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">rephlekt does work</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./notes.html">notes</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="row justify-content-center vertical-center body-text">
         <div class="col-1 col-sm-2 col-md"></div>
         <div class="col-10 col-sm-8 col-md">
             <p>Hello World!</p>
-            <p>This website was created using the Bootstrap toolkit, whose code was uploaded to a <a href="https://github.com/rephlekt/website">Github</a> repo, which is watched and tested by <a href="https://travis-ci.com">Travis CI</a>, which <i>then</i>                deploys the site as a Docker container running nginx to an AWS Elastic Beanstalk instance. Whew!</p>
+            <p>This website was created using the Bootstrap toolkit, whose code was uploaded to a <a
+                    href="https://github.com/rephlekt/website">Github</a> repo, which is watched and tested by <a
+                    href="https://travis-ci.com">Travis CI</a>, which <i>then</i> deploys the site as a <a
+                    href="https://docker.com">Docker</a> container
+                running <a href="https://nginx.com">nginx</a> to an <a
+                    href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> instance. Whew!</p>
         </div>
         <div class="col-1 col-sm-2 col-md"></div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
