--- a/web_dev/notes.html
+++ b/web_dev/notes.html
@@ -37,7 +37,7 @@
     <div class="row justify-content-center vertical-center body-text">
         <div class="col-1 col-sm-2 col-md"></div>
         <div class="col-10 col-sm-8 col-md">
-            <p>These are my notes.</p>
+            <p>These are my notes. Currently attempting to deploy to S3 bucket.</p>
         </div>
         <div class="col-1 col-sm-2 col-md"></div>
     </div>
