--- a/web_dev/index.html
+++ b/web_dev/index.html
@@ -40,10 +40,11 @@
             <p>Hello World!</p>
             <p>This website was created using the Bootstrap toolkit, whose code was uploaded to a <a
                     href="https://github.com/rephlekt/website">Github</a> repo, which is watched and tested by <a
-                    href="https://travis-ci.com">Travis CI</a>, which <i>then</i> deploys the site as a <a
-                    href="https://docker.com">Docker</a> container
-                running <a href="https://nginx.com">nginx</a> to an <a
-                    href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> instance. Whew!</p>
+                    href="https://travis-ci.com">Travis CI</a>, which <i>used</i> to be deployed as a <a
+                    href="https://docker.com">Docker</a> container running <a href="https://nginx.com">nginx</a> to an
+                <a href="https://aws.amazon.com/elasticbeanstalk/">AWS Elastic Beanstalk</a> instance, but <i>now</i>
+                is deployed as a static site in an S3 bucket to save me money.
+            </p>
         </div>
         <div class="col-1 col-sm-2 col-md"></div>
     </div>
