broke out notes section

--- a/web_dev/devops_notes.html
+++ b/web_dev/devops_notes.html
@@ -38,8 +38,35 @@
         <div class="col-1 col-sm-2 col-md"></div>
         <div class="col-10 col-sm-8 col-md">
             <h2>These are my notes.</h2>
-            <p><a href="./devops_notes.html">DevOps Notes</a></p>
-            <p> <a href="./webdev_notes.html">WebDev Notes</a></p>
+            <p>
+                What is Continuous Integration?
+            <ul>
+                <li>The use of an automated build server that listens for code changes in a repository
+                </li>
+                <li> Build server will build/compile the code, and run automated tests on the output
+                </li>
+            </ul>
+            </p>
+            <p>
+                What is Continuous Delivery?
+            <ul>
+                <li>Built software can be released whenever needed
+                </li>
+                <li> Releases are multiple time a day, not a few months between like the old days
+                </li>
+                <li> Automated deployment server will send product over to multiple app servers
+                </li>
+            </ul>
+            </p>
+            <p>
+                Difference between Continuous Delivery and Continuous Deployment:
+            <ul>
+                <li> Continuous Delivery requires a manual step to approve a deployment
+                </li>
+                <li> Continuous Deployment is fully automated, no manual intervention of approvals
+                </li>
+            </ul>
+            </p>
         </div>
         <div class="col-1 col-sm-2 col-md"></div>
     </div>
