--- a/web_dev/webdev_notes.html
+++ b/web_dev/webdev_notes.html
@@ -38,8 +38,13 @@
         <div class="col-1 col-sm-2 col-md"></div>
         <div class="col-10 col-sm-8 col-md">
             <h2>These are my notes.</h2>
-            <p><a href="./devops_notes.html">DevOps Notes</a></p>
-            <p> <a href="./webdev_notes.html">WebDev Notes</a></p>
+            <p>
+                Using Express JS
+            <ul>
+                <li>Use app.get for page routing</li>
+                <li>Remember: the order your app.get statements are in matters!</li>
+            </ul>
+            </p>
         </div>
         <div class="col-1 col-sm-2 col-md"></div>
     </div>
