adding updated notes

--- a/web_dev/webdev_notes.html
+++ b/web_dev/webdev_notes.html
@@ -41,8 +41,10 @@
             <p>
                 Using Express JS
             <ul>
-                <li>Use app.get for page routing</li>
+                <li>Use app.get for page routing (that's your different "slash" destinations</li>
                 <li>Remember: the order your app.get statements are in matters!</li>
+                <li>You also have app.post available as well</li>
+                <li>Use ":" in your app.get route to set a param</li>
             </ul>
             </p>
         </div>
